--- a/PC/html/_new/search.html
+++ b/PC/html/_new/search.html
@@ -813,11 +813,11 @@
 					<!-- 201221 : S -->
                     <div class="pd_filter">
                         <p class="pd_total">
-                            <em class="font_t">13,657</em>건의 검색결과
+                            <em class="font_t">13,657</em>건의 검색결과가 있습니다. 
                         </p>
                         <div class="form_select">
-                            <select id="ulSorta">
-                                <option value="ODC"  selected>인기순</option>
+                            <select id="ulSorta" >
+                                <option value="ODC"  selected >인기순</option>
                                 <option value="DAT" >신상품순</option>
                                 <option value="LOP" >낮은가격순</option>
                                 <option value="HIP" >높은가격순</option>
@@ -958,24 +958,17 @@
 										</div>
 									</li>
 								</ul>
-								<div class="detail">
-									<!-- <div class="select_condition">
-										<ul>
-											<li><a href="#none">디자인문구>다이어리/스케쥴러</a></li>
-											<li><a href="#none">필기구</a></li>
-										</ul>
-									</div> -->
-									<div class="btn_wrapper">
-										<a href="#none" class="btn_reset">초기화</a>
-										<!-- <a href="#none" class="btn_black">적용하기</a> -->
-									</div>
+
+								<div class="btn_wrapper">
+									<a href="#none" class="btn_reset">초기화</a>
+									<!-- <a href="#none" class="btn_black">적용하기</a> -->
 								</div>
 							</div>
 							<!-- <a href="#none" class="btn_filter"></a> -->
 						</div>
 					</div>
 
-					<div class="cont03">
+					<div class="cont03 mgt10">
 						
 						<!-- 상품 -->
 						<div class="pd_list">
