--- a/MOBILE/path_now.html
+++ b/MOBILE/path_now.html
@@ -839,7 +839,7 @@ th.row-headers-background {
         <td class="s10"></td>
         <td class="s16"></td>
         <td class="s17"></td>
-        <td class="s18" dir="ltr"><a target="_blank" href="http://dev.hottracks.co.kr/pages/html/cart.html">http://dev.hottracks.co.kr/pages/html/cart.html</a></td>
+        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/cart.html">./html/new/cart.html</a></td>
         <td class="s19" dir="ltr">완료</td>
         <td class="s16"></td>
         <td class="s4"></td>
@@ -851,7 +851,7 @@ th.row-headers-background {
         <td class="s10"></td>
         <td class="s16"></td>
         <td class="s17"></td>
-        <td class="s18" dir="ltr"><a target="_blank" href="http://dev.hottracks.co.kr/pages/html/cart_nodata.html">http://dev.hottracks.co.kr/pages/html/cart_nodata.html</a></td>
+        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/cart_nodata.html">./html/new/cart_nodata.html</a></td>
         <td class="s19" dir="ltr">완료</td>
         <td class="s16"></td>
         <td class="s4"></td>
@@ -859,12 +859,12 @@ th.row-headers-background {
       <tr style='height:29px;'>
         <th id="2024277320R6" style="height: 29px;" class="row-headers-background"><div class="row-header-wrapper" style="line-height: 29px;">7</div></th>
         <td class="s14"></td>
-        <td class="s16" rowspan="2">주문서 작성 (주문결제)</td>
-        <td class="s10">비회원</td>
+        <td class="s16" rowspan="3">주문서 작성 (주문결제)</td>
+        <td class="s16">비회원</td>
         <td class="s10"></td>
         <td class="s16"></td>
         <td class="s17"></td>
-        <td class="s18" dir="ltr"><a target="_blank" href="./html/_new/orderSheet.html">./html/_new/orderSheet.html</a></td>
+        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/orderSheet.html">./html/new/orderSheet.html</a></td>
         <td class="s19" dir="ltr"></td>
         <td class="s16"></td>
         <td class="s4"></td>
@@ -872,11 +872,23 @@ th.row-headers-background {
       <tr style='height:29px;'>
         <th id="2024277320R7" style="height: 29px;" class="row-headers-background"><div class="row-header-wrapper" style="line-height: 29px;">8</div></th>
         <td class="s14"></td>
-        <td class="s10">회원</td>
+        <td class="s16">회원</td>
         <td class="s10"></td>
         <td class="s16"></td>
         <td class="s17"></td>
-        <td class="s18" dir="ltr"><a target="_blank" href="./html/_new/orderSheet_member.html">./html/_new/orderSheet_member.html</a></td>
+        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/orderSheet_member.html">./html/new/orderSheet_member.html</a></td>
+        <td class="s19" dir="ltr"></td>
+        <td class="s16"></td>
+        <td class="s4"></td>
+      </tr>
+      <tr style='height:29px;'>
+        <th id="2024277320R7" style="height: 29px;" class="row-headers-background"><div class="row-header-wrapper" style="line-height: 29px;">8</div></th>
+        <td class="s14"></td>
+        <td class="s16">상품상세</td>
+        <td class="s10"></td>
+        <td class="s16"></td>
+        <td class="s17"></td>
+        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/orderSheet_detail.html">./html/new/orderSheet_detail.html</a></td>
         <td class="s19" dir="ltr"></td>
         <td class="s16"></td>
         <td class="s4"></td>
@@ -889,7 +901,7 @@ th.row-headers-background {
         <td class="s10"></td>
         <td class="s16"></td>
         <td class="s17"></td>
-        <td class="s18" dir="ltr"><a target="_blank" href="http://dev.hottracks.co.kr/pages/html/orderComplete.html">http://dev.hottracks.co.kr/pages/html/orderComplete.html</a></td>
+        <td class="s18" dir="ltr"><a target="_blank" href="./html/new/orderComplete.html">./html/new/orderComplete.html</a></td>
         <td class="s19" dir="ltr">완료</td>
         <td class="s16"></td>
         <td class="s4"></td>
@@ -901,7 +913,7 @@ th.row-headers-background {
         <td class="s21"></td>
         <td class="s20"></td>
         <td class="s22"></td>
-        <td class="s23" dir="ltr"><a target="_blank" href="http://dev.hottracks.co.kr/pages/html/orderComplete_bank.html">http://dev.hottracks.co.kr/pages/html/orderComplete_bank.html</a></td>
+        <td class="s23" dir="ltr"><a target="_blank" href="./html/new/orderComplete_bank.html">./html/new/orderComplete_bank.html</a></td>
         <td class="s24" dir="ltr">완료</td>
         <td class="s20"></td>
         <td class="s25"></td>
