--- a/MOBILE/html/new/cart.html
+++ b/MOBILE/html/new/cart.html
@@ -12,17 +12,26 @@
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-itunes-app" content="app-id=1129743143">
 <meta name="google-play-app" content="app-id=kr.co.hottracks.m.and">
-<link rel="apple-touch-icon-precomposed" href="../../images/content/ico_app.png" />
-<link rel="apple-touch-startup-image" href="../../images/content/ico_app.png">
-<link href="/favicon.ico" rel="shortcut icon">
+
 <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/earlyaccess/notosanskr.css">
-<link rel="stylesheet" type="text/css" href="../../pages/html/css/layout.css">
-<link rel="stylesheet" type="text/css" href="../../pages/html/css/content.css">
-<link rel="stylesheet" type="text/css" href="../../pages/html/css/common.css">
-<link rel="stylesheet" type="text/css" href="../../pages/html/css/common_v2.css">
-<link rel="stylesheet" type="text/css" href="../../pages/html/css/swiper-5.1.0.min.css">
-<script type="text/javascript" src="../../js/jquery-1.9.1.min.js?20191101"></script> 
-<script type="text/javascript" src="../../js/common.js?20191101"></script>
+<link href="../../images/biz/common/favicon.ico" rel="shortcut icon">
+<link rel="stylesheet" type="text/css" href="../../css/layout.css">
+<link rel="stylesheet" type="text/css" href="../../css/content.css">
+<link rel="stylesheet" type="text/css" href="../../css/common.css">
+<link rel="stylesheet" type="text/css" href="../../css/swiper.min.css">
+<link rel="stylesheet" type="text/css" href="../../css/biz/common_v2.css">
+<link rel="stylesheet" type="text/css" href="../../css/biz/hottm_yj.css">
+
+<link rel="stylesheet" type="text/css" href="../../css/_new/orderandpay.css">
+
+<script type="text/javascript" src="../../js/jquery-1.9.1.min.js"></script>
+<script type="text/javascript" src="../../js/swiper.min.js"></script>
+<script type="text/javascript" src="../../js/common.js"></script>
+<script type="text/javascript" src="../../js/biz/common_v2.js"></script>
+<script type="text/javascript" src="../../js/biz/m_hott.js"></script>
+<script type="text/javascript" src="../../js/biz/jquery/jquery.easing.1.3.min.js"></script>
+<script type="text/javascript" src="../../js/biz/jquery/TweenMax.min.js"></script>
+
 <script type="text/javascript">
 jQuery(function($) {
 	$(document).ready(function(){
@@ -132,7 +141,7 @@ jQuery(function($) {
 </style>
 </head>
 <body class="">
-<div id="wrap" class="content_new">
+<div id="wrap" class="content_new orderandpay">
   <!-- #header -->
   <div id="header">
     <div class="inner"> <a href="#n" class="btn_home" _onclick="location.href='http://devm.hottracks.co.kr/';return false;">홈버튼</a>       
@@ -558,7 +567,7 @@ function footerFn(){//footer
 		    </div>
 			<div class="cont">
 				<a href="#n" _traget="_blank" _onclick="winOpen('http://www.hottracks.co.kr/heart/');return false;">
-					<img src="/images/biz/common/img_award.png" alt="소셜아이어워드 2019">
+					<img src="../../images/biz/common/img_award.png" alt="소셜아이어워드 2019">
 				</a>
 				<ul class="sns_wrap">
 		            <li class="ig"><a href="#n" _traget="_blank" _onclick="linkToInstagram('home');return false;">instagram</a></li>
